@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor UI_COLOR_T4
skinparam classBackgroundColor UI_COLOR

package UI <<Rectangle>>{
Class "<<interface>>\nUi" as Ui
Class "{abstract}\nUiPart" as UiPart
Class UiManager
Class MainWindow
Class HelpWindow
Class ResultDisplay
Class PersonListPanel
Class ApplicationCard
Class StatusBarFooter
Class CommandBox
}

package Model <<Rectangle>> {
  class "Application" as Application MODEL_COLOR
}

package Logic <<Rectangle>> {
  interface "Logic" as Logic LOGIC_COLOR
}

class MainApp #FFFFFF

MainApp ..> Ui

PersonListPanel -down-> "*" ApplicationCard

MainWindow --> Logic
UiManager --> Logic

MainWindow --|> UiPart
ResultDisplay --|> UiPart
CommandBox --|> UiPart
PersonListPanel --|> UiPart
ApplicationCard --|> UiPart
StatusBarFooter --|> UiPart
HelpWindow --|> UiPart

ApplicationCard ..> Model
UiManager -right-> Logic
MainWindow -left-> Logic

ApplicationListPanel *--> "*" ApplicationCard

ApplicationListPanel ..> Application
ApplicationCard ..> Application
CommandBox --> CommandExecutor

ApplicationListPanel -[hidden]left- HelpWindow
HelpWindow -[hidden]left- CommandBox
CommandBox -[hidden]left- ResultDisplay
ResultDisplay -[hidden]left- StatusBarFooter
@enduml
